# 2024-BO-summer-school

./: .gitignore  README.md  environment.yml  justfile  pyproject.toml
explore-bo-implementations/: BOFire.py  BOTorch.py  BayBE.py
tutorial-notebooks/: 2-single-objective-reaction-optimization.ipynb  3-multi-objective-reaction-optimization.ipynb  SO-BayBE.ipynb  SargentBOSummerSchool_BOFire.ipynb  SargentBOSummerSchool_BayBE.ipynb  util.py
tutorial-notebooks/synthetic_examples/: synthetic_example.ipynb  visualization.ipynb
tutorial-notebooks/tutorial-resources/: suzuki_miyaura_catalysts.csv  suzuki_miyaura_ligands.csv
